Changed secondary color; Removed blog posts; Few lines addes;

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,7 +14,7 @@
       {% endif %}
           <div>
             {% if site.black-favicon %}
-              <img src="{{site.baseurl}}{{ site.black-favicon }}" alt="">
+              <i class="{{site.icon-provider}} {{ site.black-favicon }}" alt=""></i>
             {% endif %}
             {{ site.title }}
           </div>
