--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@
 $primary-color: #000;
 
 // Anchor color
-$secondary-color: #00cdff;
+$secondary-color: #00ff01;
 
 // Font color
 $font-color: #fff;
